# whatsapp-for-linux

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  whatsapp-for-linux.desktop
.github/: contributing.md  funding.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  codeql-analysis.yml  install.yml  lint.yml  linter.yml  release.yml
appimage/: AppImageBuilder.yml
debian/: changelog  control  copyright  install  rules  watch
debian/source/: options
debian/upstream/: metadata
flatpak/: com.eneshecan.WhatsApp-For-Linux.yml  com.github.eneshecan.WhatsAppForLinux.yml  notes.txt
package/snap/: snapcraft.yaml
po/: CMakeLists.txt  LINGUAS  POTFILES.in  bn.po  cs.po  de.po  en.po  es.po  fr.po  hu.po  it.po  ka.po  nl.po  pl.po  pt-br.po  pt_BR.po  ru.po  si.po  tr.po  uk.po  whatsapp-for-linux.pot  zh-Hans.po  zh_Hans.po
resource/: CMakeLists.txt  gresource.xml
resource/desktop/: com.github.eneshecan.WhatsAppForLinux.appdata.xml  com.github.eneshecan.WhatsAppForLinux.appdata.xml.in  com.github.eneshecan.WhatsAppForLinux.desktop  com.github.eneshecan.WhatsAppForLinux.desktop.in  whatsapp-for-linux.desktop
resource/ui/: MainWindow.ui  MainWindow.ui~  PhoneNumberDialog.ui  PreferencesWindow.ui  ShortcutsWindow.ui
snap/: snapcraft.yaml
src/: Application.cpp  Application.hpp  CMakeLists.txt  Config.hpp.in  MainWindow.cpp  MainWindow.h  MainWindow.hpp  PhoneNumberDialog.cpp  PhoneNumberDialog.hpp  Resources.c  SettingMap.hpp  Settings.cpp  Settings.hpp  TrayIcon.cpp  TrayIcon.hpp  Version.hpp  WebView.cpp  WebView.h  WebView.hpp  main.cpp
src/ui/: Application.cpp  Application.hpp  MainWindow.cpp  MainWindow.hpp  PhoneNumberDialog.cpp  PhoneNumberDialog.hpp  PreferencesWindow.cpp  PreferencesWindow.hpp  TrayIcon.cpp  TrayIcon.hpp  WebView.cpp  WebView.hpp
src/util/: Helper.cpp  Helper.hpp  SettingMap.hpp  Settings.cpp  Settings.hpp  Sound.cpp  Sound.hpp
ui/: MainWindow.ui
